--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css" />
     <link rel="stylesheet" href="css/owl.theme.default.min.css" />
     <link rel="stylesheet" href="css/magnific-popup.css" />
+    <link rel="icon" href="images/favicon3.jpg" type="image/jpg">
 
     <link rel="stylesheet" href="css/aos.css" />
 
