--- a/MyProject.html
+++ b/MyProject.html
@@ -15,6 +15,7 @@
 
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css" />
     <link rel="stylesheet" href="css/animate.css" />
+    <link rel="icon" href="images/favicon3.jpg" type="image/jpg" />
 
     <link rel="stylesheet" href="css/owl.carousel.min.css" />
     <link rel="stylesheet" href="css/owl.theme.default.min.css" />
