--- a/index.html
+++ b/index.html
@@ -174,8 +174,7 @@
                     <span>Date of birth:</span> <span>February 02, 1987</span>
                   </li>
                   <li class="d-flex">
-                    <span>Address:</span> <span>Maastrichter Str. 38
-                      41464 Neuss</span>
+                    <span>Address:</span> <span>Neuss, Germany</span>
                   </li>
                   <li class="d-flex">
                     <span>Email:</span> <span>ward-rich-2024@hotmail.com</span>
@@ -692,7 +691,7 @@
                 <span class="icon-map-signs"></span>
               </div>
               <h3 class="mb-4">Address</h3>
-              <p>Maastrichter Str. 38, 41464 Neuss</p>
+              <p>Neuss,Germany</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
